--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         PROJETO CORDEL
     </header>
 
+    <!-- o href esta com o "#" pois sera onde colocaremos o link da tela de login -->
+    
     <footer>
         <a href="#">home</a>
     </footer>
